test: update service unit tests for new Spring Boot version